--- a/indek.html
+++ b/indek.html
@@ -1,10 +1,15 @@
-!DOCTYPE html>
+<!DOCTYPE html>
  <html>
 <head>
-
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="">
 </head>
-
-
-
-
+<body bgcolor="#8b3cc3">
+    <form method="post">
+    <button value="Klik oke" name="tbl1"> tekan saja -- ! </button>
+    <input type="color" id="color1" name="input1">
+    <input type="date" name="tanggal"
+    <input type="submit" value="kirim"
+    </form>
+</body>
 </html>
